@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.152 2007/03/16 08:35:23 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.153 2007/03/17 07:32:14 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -34,15 +34,25 @@ $conf->default_smtp_port = 25;
 // $conf->domains[$i]->in = 'mail.sourceforge.net:110/pop3';
 //  imap or pop3 server name + port + protocol (only if not imap)
 //  [server_name]:[port number]/[protocol]/[options]
-//  ex for an imap server : mail.sourceforge.net:143
-//  ex for an imap server with explicit TLS/SSL negociation desactivated : mail.sourceforge.net:143/notls (may be useful for some courier-imap installation).
-//  ex for an ssl imap server : mail.sourceforge.net:993/ssl
-//  ex for an ssl imap server with a self-signed certificate : mail.sourceforge.net:993/ssl/novalidate-cert
-//  ex for a pop3 server  : mail.sourceforge.net:110/pop3
-//  ex for a pop3 server with explicit TLS/SSL negociation desactivated : mail.sourceforge.net:110/pop3/notls (may be useful for some courier-imap installation).
-//  ex for an ssl pop3 server : mail.sourceforge.net:995/pop3/ssl
-//  ex for an ssl pop3 server with a self-signed certificate : mail.sourceforge.net:995/pop3/ssl/novalidate-cert
-//  protocol can only be pop3
+//  ex for an imap server:
+//    mail.sourceforge.net:143
+//  ex for an imap server with explicit TLS/SSL negociation desactivated:
+//    mail.sourceforge.net:143/notls (may be useful for some courier-imap
+//    installation).
+//  ex for an ssl imap server:
+//    mail.sourceforge.net:993/ssl
+//  ex for an ssl imap server with a self-signed certificate:
+//    mail.sourceforge.net:993/ssl/novalidate-cert
+//  ex for a pop3 server:
+//    mail.sourceforge.net:110/pop3
+//  ex for a pop3 server with explicit TLS/SSL negociation desactivated:
+//    mail.sourceforge.net:110/pop3/notls (may be useful for some courier-imap
+//    installation).
+//  ex for an ssl pop3 server:
+//    mail.sourceforge.net:995/pop3/ssl
+//  ex for an ssl pop3 server with a self-signed certificate:
+//    mail.sourceforge.net:995/pop3/ssl/novalidate-cert
+//  protocol can only be pop3 (imap is implicit)
 //
 // $conf->domains[$i]->smtp = 'smtp.isp.com';
 //  Optional: smtp server name or IP address
@@ -50,6 +60,54 @@ $conf->default_smtp_port = 25;
 //
 // $conf->domains[$i]->smtp_port = 25;
 //  Port number to connect to smtp server (usually 25)
+//
+// $conf->domains[$i]->login_with_domain = 1;
+//  Set value to 1 for 'user<char>domain.com' style logins
+//
+// $conf->domains[$i]->login_with_domain_character = '@';
+//  Select character to use for login_with_domain option
+//
+// $conf->domains[$i]->login_suffix = '';
+//  Fill in if you require login suffixes for your mail server
+//
+// $conf->domains[$i]->login_aliases = array();
+//  Uncomment for login aliases and use the following syntax:
+//   login_aliases = array('alias1' => 'real_login_1',
+//                         'alias2' => 'real_login_2');
+//  If you want to use an external file, use the following syntax:
+//   login_aliases = '@/path/to/file/';
+//  See login_alias.sample file for example.
+//
+// $conf->domains[$i]->login_allowed = array();
+//  Uncomment for allowed logins and use the following syntax:
+//   login_allowed = array('login_1' => '', 'login_2' => '');
+//  If you want to use an external file, use the following syntax:
+//   login_allowed = '@/path/to/file/';
+//  See login_allowed.sample file for example.
+//
+// $conf->domains[$i]->smtp_auth_method = '';
+//  Select SMTP AUTH method.
+//  Supported AUTH methods are :
+//   '' : no authentification method
+//   'PLAIN' : AUTH PLAIN method
+//   'LOGIN' : AUTH LOGIN method
+//
+// $conf->domains[$i]->imap_namespace = "INBOX.";
+//  Select IMAP Namespace
+//
+// $conf->domains[$i]->have_ucb_pop_server = false;
+//  For old UCB POP server, change this setting to 1 to enable
+//  new mail detection. Recommended: leave it to 0 for any other POP or
+//  IMAP server.
+//  See FAQ for more details.
+//
+// $conf->domains[$i]->quota_enable=false;
+//  Enable quota checks.
+//  Works only with c-client2000 or more recent, and IMAP inbox
+//
+// $conf->domains[$i]->quota_type='STORAGE';
+//  Quota types.
+//  Possible values are STORAGE or MESSAGE
 
 $i = 0;
 
@@ -57,32 +115,16 @@ $conf->domains[$i]->domain = '';
 $conf->domains[$i]->in = '';
 $conf->domains[$i]->smtp = '';
 $conf->domains[$i]->smtp_port = 25;
-// Uncomment for 'user<char>domain.com' style logins
-//$conf->domains[$i]->login_with_domain = 1;
-// Uncomment and select character to use for login_with_domain option
-//$conf->domains[$i]->login_with_domain_character = '@';
-// Fill in if you require login suffixes for your mail server
+$conf->domains[$i]->login_with_domain = 0;
+$conf->domains[$i]->login_with_domain_character = '@';
 $conf->domains[$i]->login_suffix = '';
-// Uncomment for login aliases and use the following syntax:
-// login_aliases = array('alias1' => 'real_login_1','alias2' => 'real_login_2');
-// If you want to use an external file, use the following syntax:
-// login_aliases = '@/path/to/file/';
-// See login_alias.sample file for example.
-//$conf->domains[$i]->login_aliases = array();
-// Uncomment for allowed logins and use the following syntax:
-// login_allowed = array('login_1' => '', 'login_2' => '');
-// If you want to use an external file, use the following syntax:
-// login_allowed = '@/path/to/file/';
-// See login_allowed.sample file for example.
-//$conf->domains[$i]->login_allowed = array();
-// Select SMTP AUTH method.
-// Supported AUTH methods are :
-// '' : no authentification method
-// 'PLAIN' : AUTH PLAIN method
-// 'LOGIN' : AUTH LOGIN method
+$conf->domains[$i]->login_aliases = array();
+$conf->domains[$i]->login_allowed = array();
 $conf->domains[$i]->smtp_auth_method = '';
-// Select IMAP Namespace
 $conf->domains[$i]->imap_namespace = "INBOX.";
+$conf->domains[$i]->have_ucb_pop_server = false;
+$conf->domains[$i]->quota_enable=false;
+$conf->domains[$i]->quota_type='STORAGE';
 
 // If you want to add more domains, uncomment the following
 // lines and fill them in
@@ -92,24 +134,32 @@ $conf->domains[$i]->imap_namespace = "INBOX.";
 //$conf->domains[$i]->in = '';
 //$conf->domains[$i]->smtp = '';
 //$conf->domains[$i]->smtp_port = 25;
-//$conf->domains[$i]->login_with_domain = 1;
+//$conf->domains[$i]->login_with_domain = 0;
+//$conf->domains[$i]->login_with_domain_character = '@';
 //$conf->domains[$i]->login_suffix = '';
 //$conf->domains[$i]->login_aliases = array();
 //$conf->domains[$i]->login_allowed = array();
 //$conf->domains[$i]->smtp_auth_method = '';
 //$conf->domains[$i]->imap_namespace = "INBOX.";
+//$conf->domains[$i]->have_ucb_pop_server = false;
+//$conf->domains[$i]->quota_enable=false;
+//$conf->domains[$i]->quota_type='STORAGE';
 
 //$i++;
 //$conf->domains[$i]->domain = '';
 //$conf->domains[$i]->in = '';
 //$conf->domains[$i]->smtp = '';
 //$conf->domains[$i]->smtp_port = 25;
-//$conf->domains[$i]->login_with_domain = 1;
+//$conf->domains[$i]->login_with_domain = 0;
+//$conf->domains[$i]->login_with_domain_character = '@';
 //$conf->domains[$i]->login_suffix = '';
 //$conf->domains[$i]->login_aliases = array();
 //$conf->domains[$i]->login_allowed = array();
 //$conf->domains[$i]->smtp_auth_method = '';
 //$conf->domains[$i]->imap_namespace = "INBOX.";
+//$conf->domains[$i]->have_ucb_pop_server = false;
+//$conf->domains[$i]->quota_enable=false;
+//$conf->domains[$i]->quota_type='STORAGE';
 
 // If you use many mail domains, the one used will be we one of the HTTP host,
 // and the user won't be asked for the domain to connect.
@@ -201,12 +251,6 @@ $conf->default_sort = '4';
 // '0' --> bottom to top)
 $conf->default_sortdir = '1';
 
-// For old UCB POP server, change this setting to 1 to enable
-// new mail detection. Recommended: leave it to 0 for any other POP or
-// IMAP server.
-// See FAQ for more details.
-$conf->have_ucb_pop_server = false;
-
 // If you wanna make your own theme and force people to use that one, 
 // set $conf->use_theme to false and fill in the $conf->default_theme to 
 // the theme name you want to use
@@ -280,14 +324,6 @@ $conf->allowed_char='';
 // OS independent, this is a MTA problem
 // not ours.
 $conf->crlf = "\r\n";
-
-// Enable quota checks.
-// Works only with c-client2000 or more recent, and IMAP inbox
-$conf->quota_enable=false;
-
-// Quota types.
-// Possible values are STORAGE or MESSAGE
-$conf->quota_type="STORAGE";
 
 // Default encoding charset to use to display email which does not include one.
 $conf->default_charset = 'ISO-8859-1';                                                                                
